# RtMidi

./: .gitignore  LICENSE  Makefile  README.md  RtMidi.cabal  example.hs  justfile  rtmidi.patch  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell-stack.yaml
Sound/: RtMidi.hs
Sound/RtMidi/: Foreign.hsc  Report.hs
docker/: Dockerfile  packages.txt
examples/: callback.hs  playback.hs  poll.hs  query.hs  report.hs
rtmidi/: RtMidi.cpp  rtmidi_c.cpp  rtmidi_c.h
test/: Main.hs
