name:                RtMidi
version:             0.1.0.0
category:            Sound
build-type:          Simple
extra-source-files:  rtmidi/rtmidi_c.h
                     rtmidi/RtMidi.h
cabal-version:       >=1.10

library
  exposed-modules:     Sound.RtMidi
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010
  include-dirs:        rtmidi
  cc-options:          -D__LINUX_ALSA__ 
  c-sources:           rtmidi/RtMidi.cpp
                       rtmidi/rtmidi_c.cpp
  extra-libraries:     asound pthread stdc++

executable example-playback
  main-is:             examples/playback.hs
  build-depends:       base >=4.9 && <4.10
                     , RtMidi
  default-language:    Haskell2010

executable example-query
  main-is:             examples/query.hs
  build-depends:       base >=4.9 && <4.10
                     , RtMidi
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/riottracker/RtMidi

