name:                RtMidi
version:             0.1.0.0
category:            Sound
build-type:          Simple
extra-source-files:  rtmidi/rtmidi_c.h
                     rtmidi/RtMidi.h
cabal-version:       >=1.10


Flag alsa {
  Description:  Enable ALSA sequencer support
  Default:      False
}

Flag jack {
  Description:  Enable support
  Default:      False
}

Flag core {
  Description:  Enable CoreMIDI support
  Default:      False
}

Flag mm {
  Description:  Enable Windows Multimedia Library support
  Default:      False
}


library
  exposed-modules:     Sound.RtMidi
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010
  include-dirs:        rtmidi
  extra-libraries:     stdc++
  c-sources:           rtmidi/RtMidi.cpp
                       rtmidi/rtmidi_c.cpp
  if flag(alsa)
    cc-options:       -D__LINUX_ALSA__
    extra-libraries:  asound pthread
  if flag(jack)
    cc-options:       -D__UNIX_JACK__
    extra-libraries:  jack
  if flag(core)
    cc-options:       -D__MAXOSX_CORE__
    extra-libraries:  CoreMIDI CoreAudio CoreFoundation


source-repository head
  type:     git
  location: https://github.com/riottracker/RtMidi

