name:                RtMidi
version:             0.2.0.0
description:         Haskell wrapper for RtMidi, the lightweight, cross-platform MIDI I/O library.
category:            Sound
build-type:          Simple
author:              kohlrabi
license-file:        LICENSE
homepage:            https://github.com/riottracker/RtMidi
maintainer:          kohlrabi@kohlra.biz
extra-source-files:  rtmidi/rtmidi_c.h
                     rtmidi/RtMidi.h
                     examples/callback.hs
                     examples/playback.hs
                     examples/poll.hs
                     examples/query.hs
cabal-version:       >=1.10
license:             MIT

Flag alsa {
  Description:  Enable ALSA sequencer api
  Default:      True
}

Flag jack {
  Description:  Enable JACK api
  Default:      False
}

Flag core {
  Description:  Enable CoreMIDI api
  Default:      True
}

-- TODO(ejconlon) Add windows support
-- Flag mm {
--   Description:  Enable Windows Multimedia Library api
--   Default:      False
-- }


library
  exposed-modules:     Sound.RtMidi
  other-modules:       Sound.RtMidi.Foreign
  build-depends:       base >=4.9 && <4.15
  default-language:    Haskell2010
  include-dirs:        rtmidi
  extra-libraries:     stdc++
  c-sources:           rtmidi/RtMidi.cpp
                       rtmidi/rtmidi_c.cpp
  if flag(alsa) && os(linux)
    cc-options:       -D__LINUX_ALSA__
    extra-libraries:  asound pthread
  if flag(jack) && (os(linux) || os(darwin))
    cc-options:       -D__UNIX_JACK__
    extra-libraries:  jack
  if flag(core) && os(darwin)
    cc-options:       -D__MACOSX_CORE__
    frameworks:       CoreMIDI CoreAudio CoreFoundation
  -- TODO(ejconlon) Add windows support

executable rtmidi-callback
  main-is:            callback.hs
  hs-source-dirs:     examples
  build-depends:
      base
    , RtMidi
  default-language:   Haskell2010

executable rtmidi-playback
  main-is:            playback.hs
  hs-source-dirs:     examples
  build-depends:
      base
    , RtMidi
  default-language:   Haskell2010

executable rtmidi-poll
  main-is:            poll.hs
  hs-source-dirs:     examples
  build-depends:
      base
    , RtMidi
  default-language:   Haskell2010

executable rtmidi-query
  main-is:            query.hs
  hs-source-dirs:     examples
  build-depends:
      base
    , RtMidi
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/riottracker/RtMidi
